--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 config.py
 # Adding additional files
 /Weather_Database/config.py
+/Vacation_Search/config.py
 API Key list.py
 API_practice.ipynb
 random_numbers.ipynb
