--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ config.py
 # Adding additional files
 /Weather_Database/config.py
 /Vacation_Search/config.py
+/Vacation_Itinerary/config.py
 API Key list.py
 API_practice.ipynb
 random_numbers.ipynb
